<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/seriesLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:longClickable="false"
            android:scaleType="fitStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription"
            tools:srcCompat="@drawable/main_alphaseries" />

        <TextView
            android:id="@+id/seriesDescriptionStaticText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/seriesLogo"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/series_description"
            android:textColor="?attr/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seriesLogo" />

        <TextView
            android:id="@+id/seriesDescriptionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/seriesDescriptionStaticText"
            android:layout_alignParentBottom="false"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seriesDescriptionStaticText"
            tools:text="bla-bla!" />

        <TextView
            android:id="@+id/seriesDescriptionApplicationStaticText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/seriesDescriptionText"
            android:layout_alignParentBottom="false"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/series_description_applications"
            android:textColor="?attr/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seriesDescriptionText" />

        <TextView
            android:id="@+id/seriesDescriptionApplicationText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/seriesDescriptionApplicationStaticText"
            android:layout_alignParentBottom="false"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            tools:text="bla-bla!" />

        <TextView
            android:id="@+id/seriesDescriptionStaticSince"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/seriesDescriptionApplicationText"
            android:layout_alignParentBottom="false"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/series_description_since"
            android:textColor="?attr/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/seriesDescriptionApplicationText" />

        <TextView
            android:id="@+id/seriesDescriptionSince"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/seriesDescriptionStaticSince"
            android:layout_alignParentBottom="false"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/seriesDescriptionStaticSince"
            tools:text="bla-bla!" />

        <TextView
            android:id="@+id/seriesDescriptionStaticSound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/seriesDescriptionSince"
            android:layout_alignParentBottom="false"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/series_description_sound"
            android:textColor="?attr/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/seriesDescriptionSince" />

        <TextView
            android:id="@+id/seriesDescriptionSound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/seriesDescriptionStaticSound"
            android:layout_alignParentBottom="false"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/seriesDescriptionApplicationText"
            tools:text="bla-bla!" />

        <TextView
            android:id="@+id/seriesDescriptionStaticAlloy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/seriesDescriptionSound"
            android:layout_alignParentBottom="false"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/series_description_alloy"
            android:textColor="?attr/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/seriesDescriptionSound" />

        <TextView
            android:id="@+id/seriesDescriptionAlloy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/seriesDescriptionStaticAlloy"
            android:layout_alignParentBottom="false"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/seriesDescriptionSound"
            tools:text="bla-bla!" />

    </RelativeLayout>
</ScrollView>