<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/expandedImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/aboutbar"
        app:layout_collapseMode="parallax"
        app:layout_collapseParallaxMultiplier="0.7"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/versionNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/expandedImage"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:paddingStart="18dp"
        android:paddingLeft="18dp"
        android:textSize="18sp"
        tools:ignore="RtlSymmetry"
        tools:text="Версия= 1,25 от 23,23,1212 " />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/AdMob_aboutApp"
        android:layout_below="@+id/versionNumber"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:id="@+id/about_app_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/divider" />

            <LinearLayout
                android:id="@+id/language_button"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="6dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvLang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:text="@string/choose_lang"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="Выберите язык" />

                <TextView
                    android:id="@+id/tvLang2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:textSize="16sp"
                    tools:text="Русский" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/divider" />

            <LinearLayout
                android:id="@+id/notifications_button"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="6dp"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                tools:ignore="InefficientWeight">

                <TextView
                    android:id="@+id/tvNotifications"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:gravity="center_vertical"
                    android:text="@string/enable_notifications"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="NestedWeights" />

                <Switch
                    android:id="@+id/tvNotifications2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:clickable="false"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/divider" />

            <TextView
                android:id="@+id/helpLangBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:padding="8dp"
                android:text="@string/help_lang"
                android:textSize="16sp" />

            <include layout="@layout/item_vk" />
        </LinearLayout>
    </ScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/AdMob_aboutApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id" />
</RelativeLayout>